# stacking-model

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
algorithm/application/: putaway.py  results.py
algorithm/domain/: constraints.py  context.py  exceptions.py  item.py  models.py  place_item.py  placement.py  storage_system.py  strategies.py
algorithm/tests/application/: test_putaway.py
algorithm/tests/domain/: test_constraints.py  test_strategies.py
src/application/: putaway.py
src/domain/: constraints.py  context.py  place_item.py  storage_system.py  strategies.py
src/tests/application/: test_putaway.py
src/tests/domain/: test_constraints.py  test_strategies.py
