[project]
name = "stacking-model"
version = "0.1.0"
description = "A model to simulate different stacking strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.8",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # docstrings
    "TD003",    # todos issue links 
    "FIX002",   # todos resolve
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"] # disable assert warning for test files